Fixed word-wrap in the main list item.

--- a/src/notepad/components/list/styles.scss
+++ b/src/notepad/components/list/styles.scss
@@ -19,7 +19,9 @@
   &__column--left {
     flex-basis: 50%;
     flex-direction: column;
-      text-align: left;
+    text-align: left;
+    overflow-wrap: break-word;
+    width: 100%;
   }
   &__column--right {
     flex-basis: 50%;
